--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "frontend-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=16"
+  },
   "dependencies": {
-    "@grpc/grpc-js": "^1.8.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,22 +14,37 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "antd": "^5.1.7",
-    "grpc-tools": "^1.12.4",
-    "grpc_tools_node_protoc_ts": "^5.3.3",
-    "protoc-gen-ts": "^0.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "ts-node": "^10.9.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@grpc/grpc-js": "^1.8.0",
+    "source-map-support": "^0.5.21",
+    "@types/node": "^16.18.11",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-sonarjs": "^0.17.0",
+    "grpc-tools": "^1.12.3",
+    "rimraf": "^3.0.2",
+    "ts-proto": "^1.136.1",
+    "typescript": "^4.9.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .ts .",
+    "build": "node bin/proto && rimraf dist && tsc -b",
+    "start": "node dist/server",
+    "client": "node dist/client",
+    "health": "node dist/health"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
